# SIS-Facturador

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
api/: index.py
app/: config.py  database.py  main.py
app/models/: invoice.py
app/routers/: invoices.py
app/schemas/: invoice.py
app/security/: cert_loader.py
app/services/: invoice_service.py
app/signer/: xmldsig.py
app/sunat/: client.py  packager.py
app/sunat/wsdl/prod/: billService_xsd2.xsd
app/ubl/: builder.py  models.py
docs/: API.md  ARCHITECTURE.md  DEPLOY_PROVIDER.md  DEPLOY_VERCEL.md  INSTALL.md  README.md  SIGNING.md  SUNAT.md  SUNAT_SETUP.md  TROUBLESHOOTING.md  UBL.md  VALIDACION_RET_PER.md
docs/security/: audit-2026-05-12.md
examples/: README.md  boleta.json  boleta_consumidor_final.json  curl_examples.sh  expected_cdr.xml  factura.json  nota_credito_boleta.json  nota_credito_factura.json  request.http
migrations/: 001_invoices.sql  002_credit_notes.sql  003_despatch_advices.sql  004_retentions.sql  005_perceptions.sql
scripts/: bootstrap_db.py  refresh_xsd_schemas.py  sendbill_beta.py  sendbill_prod.py  sendbill_prod_boleta.py  sendbill_prod_despatch.py  verify_cert.py
tests/: conftest.py
tests/e2e/: test_post_invoice.py
tests/integration/: test_sunat_beta.py
tests/unit/: test_signer.py  test_ubl_builder.py
