[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sis-facturador"
version = "0.1.0"
description = "API REST de facturación electrónica SUNAT (Perú) en Python nativo. Factura/Boleta UBL 2.1 + XMLDSig + SOAP, validada en producción."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Luis Luza M.", email = "noreply@userdkx.dev" },
]
keywords = [
    "sunat",
    "sunat-peru",
    "electronic-invoicing",
    "ubl-2.1",
    "xmldsig",
    "fastapi",
    "peru",
    "factura-electronica",
    "boleta-electronica",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Spanish",
]
dependencies = [
    "fastapi==0.115.6",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "lxml==5.3.0",
    "jinja2==3.1.5",
    "signxml==4.0.3",
    "cryptography==44.0.0",
    "zeep==4.3.1",
    "supabase==2.11.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-lxml>=2024.12",
]

[project.urls]
Homepage = "https://github.com/userDKX/SIS-Facturador"
Repository = "https://github.com/userDKX/SIS-Facturador"
Issues = "https://github.com/userDKX/SIS-Facturador/issues"
Changelog = "https://github.com/userDKX/SIS-Facturador/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "migrations*"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (Black-compatible)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "app/sunat/wsdl",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501", # line length (handled by formatter)
    "B008", # function-call-in-default-arg (FastAPI pattern with Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False in tests
"scripts/**" = ["E402"]  # scripts manipulate sys.path before imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy — strict on app/, lenient elsewhere
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true  # zeep, signxml lack complete stubs
exclude = [
    "tests/",
    "scripts/",
    "migrations/",
    "app/sunat/wsdl/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
ignore_errors = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "beta: integration tests against SUNAT beta (require MODDATOS envs configured)",
]
addopts = [
    "--strict-markers",
    "-ra",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/sunat/wsdl/*",
    "app/__init__.py",
    "app/*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
