# Workspace root del repo. NO es un paquete instalable en si mismo.
#
# Los paquetes publicables viven en packages/:
#   - packages/core/  -> sunat-py (SDK, publicable a PyPI)
#   - packages/api/   -> sis-facturador (microservicio HTTP)
#
# Este pyproject solo contiene la config de tooling (ruff, mypy, pytest,
# coverage) compartida por todo el repo. Cuando corres `ruff check .` o
# `pytest` desde la raiz, esta config aplica.

[project]
name = "sis-facturador-workspace"
version = "0.0.0"
description = "Workspace root. No instalable. Ver packages/core y packages/api."
requires-python = ">=3.11"

[tool.setuptools]
# Workspace root: no construye nada en si mismo.
packages = []

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (Black-compatible)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "packages/core/src/sunat_py/sunat/wsdl",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501", # line length (handled by formatter)
    "B008", # function-call-in-default-arg (FastAPI pattern with Depends)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B011"]   # allow assert False in tests
"scripts/**" = ["E402"]    # scripts manipulate sys.path before imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "scripts/",
    "migrations/",
    ".venv/",
    "packages/core/src/sunat_py/sunat/wsdl/",
]

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
ignore_errors = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "packages/api/tests"]
python_files = ["test_*.py"]
markers = [
    "beta: integration tests against SUNAT beta (require MODDATOS envs configured)",
]
addopts = [
    "--strict-markers",
    "-ra",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = [
    "packages/core/src/sunat_py",
    "packages/api/src/sis_facturador",
]
branch = true
omit = [
    "**/wsdl/*",
    "**/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"
